--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maa Vaisnav Devi Darshan</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./Asset/logo.png">
-    
+    <link rel="icon" href="./Asset/logo.png">    
 </head>
 <body>
-
 
     <nav class="navbar">
         <div class="logo">
@@ -28,13 +26,50 @@
         </div>
     </nav>
 
+    <!-- Hero Section with Image Slider -->
+    <section class="hero">
+        <div class="slider-container">
+            <div class="slides">
+                <div class="slide"><img src="./Asset/dummy.jpg" alt="Image 1"></div>
+                <div class="slide"><img src="./Asset/dummy.jpg" alt="Image 2"></div>
+                <div class="slide"><img src="./Asset/dummy.jpg" alt="Image 3"></div>
+                <div class="slide"><img src="./Asset/dummy.jpg" alt="Image 4"></div>
+                <div class="slide"><img src="./Asset/dummy.jpg" alt="Image 5"></div>
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+        </div>
+        <div class="dots-container">
+            <span class="dot" data-slide="0"></span>
+            <span class="dot" data-slide="1"></span>
+            <span class="dot" data-slide="2"></span>
+            <span class="dot" data-slide="3"></span>
+            <span class="dot" data-slide="4"></span>
+        </div>
+    </section>
 
 
-
-
-
-
+    <!-- history-section -->
+    <section class="history-section">
+        <div class="history-content">
+            <div class="history-image">
+                <img src="./Asset/dummy2.jpg" alt="Vaishno Devi Temple">
+            </div>
+            <div class="history-text">
+                <h2>History of Vaishno Devi</h2>
+                <p>
+                    Like most old shrines, it is difficult to mention as to when exactly the pilgrimage to this holy shrine started. 
+                    A geological study of this holy cave has indicated that it is almost a million years old. The first mention of this 
+                    holy cave is noted in the epic Mahabharata. It was the time when the Pandavas and Kauravas were facing each other 
+                    in the battlefield of Kurukshetra; upon the advice of Shri Krishna, Arjun meditated there to seek blessings for victory. 
+                    This is when Arjun addresses the mother goddess as JambooKatak Chityaisu Nityam Sannihitalaye', which means 'you who 
+                    always dwell in the temple on the slope of the mountain in Jamboo.'
+                </p>
+            </div>
+        </div>
+    </section>
     
+
 </body>
 <script src="./script.js"></script>
 </html>
