--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
   <section class="booking-section">
     <h1 class="booking-title">BOOK YOUR RIDE NOW</h1>
     <div class="booking-banner">
-      <p>चलो बुलावा आया है,<br />माता ने बुलाया है!</p>
+      <p>चलो बुलावा आया है,<br /><span style="font-weight: bolder;">माता </span>ने बुलाया है!</p>
     </div>
     <p class="booking-subtitle">
       Book your horse ride for Vaishno Devi Darshan and enjoy the convenience
