"Updated logo text to include 'Darshan' in yellow color"

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Nav Section -->
   <nav class="navbar">
     <div class="logo">
-      <a href="#">Shree Mata Vaisnav Devi</a>
+      <a href="#">Shree Mata Vaisnav Devi <span  style="color: #ffd700;">Darshan</span></a>
     </div>
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
