--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+  <button id="back-to-top" title="Back to Top">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+</button>
   <!-- Nav Section -->
   <nav class="navbar">
     <div class="logo">
@@ -373,6 +378,8 @@
       <p>COPYRIGHT © 2024, ALL RIGHT RESERVED BY DARSHAN</p>
     </div>
   </footer>
+
+
 
 
 </body>
