--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 </head>
 
 <body>
+  <!-- Back to top button -->
   <button id="back-to-top" title="Back to Top">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <polyline points="18 15 12 9 6 15"></polyline>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+      stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
     </svg>
-</button>
+  </button>
+
   <!-- Nav Section -->
   <nav class="navbar">
     <div class="logo">
-      <a href="#">Shree Mata Vaisnav Devi <span  style="color: #ffd700;">Darshan</span></a>
+      <a href="#">Shree Mata Vaisnav Devi <span style="color: #ffd700;">Darshan</span></a>
     </div>
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
