"Added new list item to navigation menu and updated styles for #tryidol element"

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <li><a href="#rates1">Horse Booking</a></li>
       <li><a href="#rates2">Doli booking</a></li>
       <li><a href="#rates3">Trolley Booking</a></li>
+      <li id="tryidol"><a href="https://tryidoltech.com/">@tryidol/Pranjal</a></li>
+
     </ul>
     <div class="hamburger">
       <span class="bar"></span>
