"Updated index.html, script.js, and style.css: added Typed.js library, modified HTML structure, and adjusted CSS styles"

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       </div>
       <div class="history-text">
         <h2>History of Vaishno Devi</h2>
-        <p>
+        <p id="element"></p>
+        <!-- <p>
           Like most old shrines, it is difficult to mention as to when exactly
           the pilgrimage to this holy shrine started. A geological study of
           this holy cave has indicated that it is almost a million years old.
@@ -79,7 +80,7 @@
           victory. This is when Arjun addresses the mother goddess as
           JambooKatak Chityaisu Nityam Sannihitalaye', which means 'you who
           always dwell in the temple on the slope of the mountain in Jamboo.'
-        </p>
+        </p> -->
       </div>
     </div>
   </section>
@@ -388,9 +389,14 @@
 
 
 </body>
+<!-- Gsap Cdn -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
   integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+<!-- External Js File -->
+
 <script src="./script.js"></script>
 
 </html>
