--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <p>Note: - Book your Horse ride now with Rs 51/- and rest later</p>
     </div>
 
-    <div class="rates-content" id="rates2">
+    <div class="rates-content" >
       <div class="rates-info">
         <div class="rates-path">
           <div class="rate-step">
