"Added id 'sc1' to services-container div and added hover effects to service-card in style.css"

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   <section class="services-section">
     <h3 class="services-heading">What We Do</h3>
     <h2 class="services-title">Our Services</h2>
-    <div class="services-container">
+    <div class="services-container" id="sc1">
       <div class="service-card">
         <div class="service-icon">
           <!-- You can replace this with an actual icon image or SVG -->
